--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="refresh" content="1800" />
 <meta property="og:description" content="Rauntímagögn um seinkanir á strætó" />
 <meta property="og:image" content="featured.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -87,7 +93,9 @@ fieldset {
 }
 
 legend {
-    font-size: small;
+    font-size: x-large;
+    font-weight: bold;
+    text-align: center;
 }
 
 body {
@@ -95,7 +103,6 @@ body {
   text-align: center;
 }
 
-/*the container must be positioned relative:*/
 .autocomplete {
   position: relative;
   display: inline-block;
@@ -162,7 +169,7 @@ img {
     width: min(42px, 8vw);
     height: min(42px, 8vw);
     padding: 4px;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 #results {
     margin-left: auto;
@@ -199,11 +206,6 @@ img {
                 <div class="autocomplete" style="width: min(350px, 40vw);">
                     <input id="station" type="text" placeholder="Stoppistöð">
                 </div>
-                <!--
-                <select name="stop" id="lines" onchange="search()">
-                    <option disabled selected>Leið</option>
-                </select>
-                -->
             </div>
             <input type="hidden" name="stop" id="stop">
             <br>
@@ -213,6 +215,7 @@ img {
     </div>
     <script src="stops.js"></script>
     <script src="names.js"></script>
+    <script src="locations.js"></script>
     <script src="autocomplete.js"></script>
 <script>
     var station_count = 2;
@@ -303,7 +306,7 @@ img {
         position = pos;
         var xhr = new XMLHttpRequest();
         xhrs.push(xhr);
-        xhr.open("GET", "neareststop.php?lat=" + pos.coords.latitude + "&lon=" + pos.coords.longitude + "&stations=" + station_count, true);
+        xhr.open("GET", "data/?lat=" + pos.coords.latitude + "&lon=" + pos.coords.longitude + "&stations=" + station_count, true);
         xhr.onreadystatechange = function() {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 data = JSON.parse(xhr.responseText);
@@ -315,7 +318,7 @@ img {
     function setStation() {
         var xhr = new XMLHttpRequest();
         xhrs.push(xhr);
-        xhr.open("GET", "neareststop.php?stop=" + station_name, true);
+        xhr.open("GET", "data/?stop=" + station_name, true);
         xhr.onreadystatechange = function() {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 data = JSON.parse(xhr.responseText);
@@ -351,20 +354,27 @@ img {
         var diff = (bus - stop) / 1000;
         return diff;
     }
+    function getSmallerDiff(d1, d2) {
+        if (Math.abs(d1) < Math.abs(d2)) {
+            return d1;
+        } else {
+            return d2;
+        }
+    }
+    function stopHTML(stop_id) {
+        return '<span class="station">' + stops[stop_id] + '</span>';
+    }
     function printStops(data) {
-        legends = ['næsta stopp', 'þarnæsta stopp', 'þriðja næsta stopp'];
+        min_dist = 50;
+        time_sensitivity = 20;
         new_stops = [];
         stop_count = data['stops'];
         for (i = 1; i <= stop_count; i++) {
             dontadd = false;
             new_stop = document.createElement('fieldset');
             new_stop.className = "stop";
-            new_stop.innerHTML = '<legend>' + legends[i-1] + '</legend>';
-            new_stop.innerHTML += '<h2 class="stop-name">' + data['stop_'+i].stop_name + '</h2>';
+            new_stop.innerHTML = '<legend>' + data['stop_' + i].stop_name + '</legend>';
             already_printed = [];
-            data['stop_'+i].trips.sort(function (a, b) {
-                return a.departure_time.localeCompare(b.departure_time);
-            });
             routes = [];
             data['stop_'+i].trips.forEach(function(trip) {
                 delay_secs = 0;
@@ -388,65 +398,93 @@ img {
                         lon2 = 1.0*data['stop_'+i].stop_lon;
                         bus_distance = distance(lat1,lon1,lat2,lon2);
 
+                        late = false;
+                        early = false;
+                        next_stop_distance = false;
+                        prev_stop_distance = false;
+                        next_stop_close = false;
+                        prev_stop_close = false;
+                        next_stop_same = false;
+                        prev_stop_same = false;
+                        at_first = false;
+                        going_from_here = false;
+
+                        delay_secs = 0;
+
                         add_text = '<p class="next-bus">';
+
                         if (trip.next_bus.next_scheduled) {
-                            diff = getTimeDifference(trip.next_bus.time, trip.next_bus.next_scheduled.departure_time);
-                            if (trip.next_bus.next == data['stop_'+i].stop_id) {
-                                add_text += 'Næsti strætó er á leið að þessu stoppi ';
-                            } else {
-                                add_text += 'Næsti strætó er á leið að stoppinu <span class="station">' + stops[trip.next_bus.next] + '</span> ';
+                            next_stop_lat = locations[trip.next_bus.next_scheduled.stop_id][0];
+                            next_stop_lon = locations[trip.next_bus.next_scheduled.stop_id][1];
+                            next_stop_distance = distance(lat1,lon1,next_stop_lat,next_stop_lon);
+                            next_diff = getSmallerDiff(getTimeDifference(trip.next_bus.time, trip.next_bus.next_scheduled.arrival_time), getTimeDifference(trip.next_bus.time, trip.preceding_trip.arrival_time));
+
+                            if (trip.next_bus.next_scheduled.stop_id == data['stop_'+i].stop_id) {
+                                next_stop_same = true;
                             }
-                            if (diff > 0) {
-                                delay_secs = diff;
-                                add_text += 'og er <span class="time">' + formatTimeDifference(diff, 'þgf') + '</span> á eftir áætlun. ';
-                            } else if (trip.next_bus.stop_scheduled) {
-                                diff = getTimeDifference(trip.next_bus.time, trip.next_bus.stop_scheduled.departure_time);
-                                if (diff < 0) {
-                                    if (trip.next_bus.stop_scheduled.stop_sequence == "1") {
-                                        add_text += 'frá upphafi leiðarinnar. ';
-                                    } else {
-                                        add_text += 'og er <span class="time">' + formatTimeDifference(-diff, 'þgf') + '</span> á undan áætlun. ';
-                                    }
-                                } else {
-                                    add_text += 'á áætlun. ';
-                                }
+
+                            if (next_diff > time_sensitivity) {
+                                late = true;
+                                delay_secs = next_diff;
+                            }
+
+                            if (next_stop_distance < min_dist) {
+                                next_stop_close = true;
+                            }
+                        }
+                        if (trip.next_bus.stop_scheduled) {
+                            // strætó er á ferðinni
+                            prev_stop_lat = locations[trip.next_bus.stop_scheduled.stop_id][0];
+                            prev_stop_lon = locations[trip.next_bus.stop_scheduled.stop_id][1];
+                            prev_stop_distance = distance(lat1,lon1,prev_stop_lat,prev_stop_lon);
+                            prev_diff = getSmallerDiff(getTimeDifference(trip.next_bus.time, trip.next_bus.stop_scheduled.departure_time), getTimeDifference(trip.next_bus.time, trip.preceding_trip.departure_time));
+
+                            if (trip.next_bus.stop == data['stop_'+i].stop_id) {
+                                prev_stop_same = true;
+                            }
+
+                            if (trip.next_bus.stop_scheduled.stop_sequence == "1") {
+                                at_first = true;
+                            }
+
+                            if (prev_diff < -time_sensitivity) {
+                                early = true;
+                            }
+
+                            if (prev_stop_distance < min_dist) {
+                                prev_stop_close = true;
+                            }
+                        }
+
+                        if (next_stop_same) {
+                            if (next_stop_close) {
+                                add_text += 'Strætó er kominn. ';
                             } else {
-                                if (trip.next_bus.next_scheduled.stop_sequence == "1") {
-                                    add_text += 'sem er upphaf leiðarinnar. ';
-                                } else {
-                                    add_text += 'á áætlun. ';
-                                }
+                                add_text += 'Næsta stopp vagnsins er hér. ';
+                            }
+                        } else if (prev_stop_same) {
+                            if (prev_stop_close) {
+                                add_text += 'Strætó er að leggja af stað héðan. ';
+                            } else {
+                                add_text += 'Strætó er á leiðinni héðan á stoppið ' + stopHTML(trip.next_bus.next) + '. ';
+                                going_from_here = true;
                             }
                         } else {
-                            if (trip.next_bus.stop_scheduled) {
-                                if (trip.next_bus.stop_scheduled.stop_id == data['stop_'+i].stop_id) {
-                                    if (trip.next_bus.stop_scheduled.stop_sequence == "1") {
-                                        if (bus_distance < 50) {
-                                            add_text += 'Strætóinn bíður hér, á upphafi leiðarinnar.';
-                                        } else {
-                                            add_text += 'Strætó er að fara héðan, frá upphafi leiðarinnar.';
-                                        }
-                                    } else {
-                                        if (bus_distance < 50) {
-                                            add_text += "Strætóinn bíður hjá stoppinu.";
-                                        } else {
-                                            add_text += 'Strætóinn er á leiðinni héðan á stoppið <span class="station">' + stops[trip.next_bus.next] + '</span>. ';
-                                        }
-                                    }
-                                } else {
-                                    if (trip.next_bus.stop_scheduled.stop_sequence == "1") {
-                                        add_text += 'Strætóinn er á upphafi leiðarinnar. ';
-                                    } else {
-                                        add_text += 'Strætóinn er á leiðinni frá stoppinu <span class="station">' + stops[trip.next_bus.stop_scheduled.stop_id] + '</span>. ';
-                                    }
-                                    diff = getTimeDifference(trip.next_bus.time, trip.next_bus.stop_scheduled.departure_time);
-                                    if (diff > 0) {
-                                        add_text += 'Hann átti að leggja af stað fyrir <span class="time">' + formatTimeDifference(diff, 'þgf') + '</span>. ';
-                                    }
-                                }
+                            if (next_stop_close) {
+                                add_text += 'Strætóinn er á stoppinu ' + stopHTML(trip.next_bus.next) + '. ';
+                            } else if (prev_stop_close) {
+                                add_text += 'Strætóinn er á stoppinu ' + stopHTML(trip.next_bus.stop) + '. ';
+                            } else if (trip.next_schedule) {
+                                add_text += 'Strætóinn er á leiðinni á stoppið ' + stopHTML(trip.next_bus.next) + '. ';
                             } else {
-                                add_text += 'Strætóinn er að gefa frá sér einhver skrítin merki. ';
+                                add_text += 'Strætóinn er á leiðinni frá stoppinu ' + stopHTML(trip.next_bus.stop) + '. ';
                             }
+                        }
+
+                        if (late) {
+                            add_text += 'Hann er <span class="time">' + formatTimeDifference(next_diff, 'þgf') + '</span> á eftir áætlun. ';
+                        } else if (early && !at_first) {
+                            add_text += 'Hann er <span class="time">' + formatTimeDifference(-prev_diff, 'þgf') + '</span> á undan áætlun. ';
                         }
 
                         add_text += '</p>';
@@ -462,8 +500,6 @@ img {
                         el_trip.innerHTML = '<div class="trip-descriptor" data-sorter="' + dep_str + '"><h4 class="trip-name">' + trip_name + '<span class="distance" id="trip' + trip.trip_id + '">(' + formatDist(bus_distance) + ')</span></h4>' +
                                             '<span class="scheduled-departure" data-departure="' + dep_str + '" delay="' + delay_secs + '"></span></div>';
                         el_trip.innerHTML += add_text;
-                    } else {
-                        //el_trip.innerHTML += '<p class="next-bus">Þessi strætó hefur ekki lagt af stað.</p>';
                     }
                     if (!dontadd)
                         routes.push([dep_str, el_trip]);
