even minorer layout tweaks

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 }
 
 fieldset {
-    border: 2px solid #d4cb88;
+    border: 2px solid rgba(249, 215, 47, 0.50);
     border-radius: 8px;
     padding: 15px;
     margin: 20px;
